designed basic landing page

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,14 @@
-<p>landing works!</p>
+<div class="container">
+    <div class="row">
+        <h2>Split Pay</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, non deserunt aspernatur eveniet quas
+            cupiditate
+            laborum officiis expedita pariatur quis asperiores placeat ullam delectus repellat iure repudiandae maiores!
+            Eveniet, commodi.</p>
+        <div class="col offset-s5">
+            <button class="btn waves-effect waves-light">Get Started
+                <i class="material-icons right">send</i>
+            </button>
+        </div>
+    </div>
+</div>
