basic navigation menu designed

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,7 +5,7 @@
             cupiditate
             laborum officiis expedita pariatur quis asperiores placeat ullam delectus repellat iure repudiandae maiores!
             Eveniet, commodi.</p>
-        <div class="col offset-s5">
+        <div class="col offset-s3 offset-m5">
             <button class="btn waves-effect waves-light">Get Started
                 <i class="material-icons right">send</i>
             </button>
