--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
 <app-header></app-header>
-<app-landing></app-landing>
+
+<div class="row">
+
+    <div class="col s12 m4 l3">
+        <app-side-nav></app-side-nav>
+    </div>
+
+    <div class="col s12 m8 l9">
+        <app-landing></app-landing>
+    </div>
+
+</div>
