--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,1 +1,6 @@
-<p>side-nav works!</p>
+<div class="collection">
+    <h5>Menu</h5>
+    <a href="#!" class="collection-item active">Dashboard</a>
+    <a href="#!" class="collection-item">My Expenses</a>
+    <a href="#!" class="collection-item">Groups</a>
+</div>
