--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
     </div>
 
     <div class="col s12 m8 l9">
-        <app-landing></app-landing>
+        <!-- <app-landing></app-landing> -->
+        <app-dashboard></app-dashboard>
     </div>
 
 </div>
