--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,31 @@
-<p>dashboard works!</p>
+<div class="cards">
+    <div class="row">
+        <div class="col s6 m3 offset-s3 offset-m4">
+            <div class="card total-expense">
+                <div class="card-content">
+                    <span class="card-title">Total Expense</span>
+                    <p>Amount: 1000</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s6 m3">
+            <div class="card owed-to-me">
+                <div class="card-content">
+                    <span class="card-title">Owed to Me</span>
+                    <p>Amount: 1000</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s6 m3 offset-m5">
+            <div class="card owed-by-me">
+                <div class="card-content">
+                    <span class="card-title">Owed by Me</span>
+                    <p>Amount: 1000</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
