basic routes defined

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,10 @@
     </div>
 
     <div class="col s12 m8 l9">
+        <router-outlet></router-outlet>
         <!-- <app-landing></app-landing> -->
-        <app-dashboard></app-dashboard>
+        <!-- <app-dashboard></app-dashboard>
+        <app-personal></app-personal> -->
     </div>
 
 </div>
