--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
 <div class="collection">
     <h5>Menu</h5>
-    <a href="#!" class="collection-item active">Dashboard</a>
-    <a href="#!" class="collection-item">My Expenses</a>
-    <a href="#!" class="collection-item">Groups</a>
+    <a routerLink="/dashboard" routerLinkActive="active current" class="collection-item">Dashboard</a>
+    <a routerLink="/personal" routerLinkActive="active current" class="collection-item">My Expenses</a>
+    <a routerLink="/groups" routerLinkActive="active current" class="collection-item">Groups</a>
 </div>
