added username-form component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
             <div class="card total-expense">
                 <div class="card-content">
                     <span class="card-title">Total Expense</span>
-                    <p>Amount: 1000</p>
+                    <p>Amount: {{expense['expenses-total']}}</p>
                 </div>
             </div>
         </div>
@@ -15,7 +15,7 @@
             <div class="card owed-to-me">
                 <div class="card-content">
                     <span class="card-title">Owed to Me</span>
-                    <p>Amount: 1000</p>
+                    <p>Amount: {{expense['owed-total']}}</p>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
             <div class="card owed-by-me">
                 <div class="card-content">
                     <span class="card-title">Owed by Me</span>
-                    <p>Amount: 1000</p>
+                    <p>Amount: {{expense['owing-total']}}</p>
                 </div>
             </div>
         </div>
