--- a/src/app/username-form/username-form.component.html
+++ b/src/app/username-form/username-form.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <form class="col s6 offset-s2 card">
+    <form class="col s10 m6 offset-s1 offset-m2 card">
         <div class="row">
-            <div class="input-field col s6 offset-s1">
+            <div class="input-field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
                 <input placeholder="Enter Username" type="text" class="validate">
             </div>
-            <div class="col offset-s1">
+            <div class="col offset-s3 offset-m1 offset-l4">
                 <button class="btn waves-effect waves-light">Submit
                     <i class="material-icons right">send</i>
                 </button>
