--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -6,9 +6,7 @@
             laborum officiis expedita pariatur quis asperiores placeat ullam delectus repellat iure repudiandae maiores!
             Eveniet, commodi.</p>
         <div class="col offset-s3 offset-m5">
-            <button class="btn waves-effect waves-light">Get Started
-                <i class="material-icons right">send</i>
-            </button>
+            <div class="g-signin2 button" data-onsuccess="onSignIn"></div>
         </div>
     </div>
 </div>
