--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -12,9 +12,9 @@ p{
     text-align: center;
 }
 
-.btn{
+.button{
     margin-top: 3em;
     border-radius: 0.5em;
     text-align: center;
-    background-color: #ff5722;
+    border-radius: 0.5em;
 }
