--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="root">
+<div class="root">
   <div class="btn" >
     Create new group
   </div>
@@ -11,6 +11,4 @@
   <div class="emty-msg" *ngIf="groups.length === 0" >
     No group created yet!
   </div>
-</div> -->
-
-<app-group></app-group>
+</div>
