My expenses and groups added

--- a/src/app/groups/group/group.component.html
+++ b/src/app/groups/group/group.component.html
@@ -1,9 +1,9 @@
-<div class="root">
+<div class="group">
   <app-members
     [users]="users"
   ></app-members>
-  <div class="history" >
+  <div class="history">
     <app-history [history]="payment_history" ></app-history>
   </div>
-  <app-controls></app-controls>
+    <app-controls ></app-controls>
 </div>
