--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -1,1 +1,6 @@
-<p>personal works!</p>
+<div class="my">
+  <div class="history">
+    <app-history [history]="payment_history" [showSettleBtn]=true ></app-history>
+  </div>
+  <app-controls [showSettleBtn]=true ></app-controls>
+</div>
