--- a/src/app/groups/group/group.component.css
+++ b/src/app/groups/group/group.component.css
@@ -1,4 +1,20 @@
+.group {
+  border: 1px solid #eeeeee;
+  padding: 0;
+  margin-top: 10px;
+  position: relative;
+  height: calc(100vh - 95px);
+}
 .history {
-  width: 100%;
-  height: 500px;
+  height: calc(100vh - 180px);
+  margin-top: 30px;
+  overflow: auto;
+}
+@media(max-width: 600px) {
+  .group {
+    height: calc(100vh - 290px);
+  }
+  .history {
+    height: calc(100vh - 380px);
+  }
 }
