--- a/src/app/shared/transaction-card/transaction-card.component.css
+++ b/src/app/shared/transaction-card/transaction-card.component.css
@@ -7,11 +7,11 @@
 .root:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-.red {
+.expense {
   background-color: #FFEBEE;
   border: 1px solid #F44336;
 }
-.green {
+.settle {
   background-color: #F1F8E9;
   border: 1px solid #8BC34A;
 }
