--- a/src/app/shared/transaction-card/transaction-card.component.html
+++ b/src/app/shared/transaction-card/transaction-card.component.html
@@ -1,4 +1,4 @@
-<div class="root" [ngClass]="{red: isExpense, green: !isExpense}" >
+<div class="root" [ngClass]="{expense: isExpense, settle: !isExpense}" >
   <div class="header" >
     <div class="amount">{{ amount }} &#8377;</div>
     <div class="btn" *ngIf="showBtn" (click)="onSettle()" >settle</div>
