--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,8 +5,11 @@
             cupiditate
             laborum officiis expedita pariatur quis asperiores placeat ullam delectus repellat iure repudiandae maiores!
             Eveniet, commodi.</p>
-        <div class="col offset-s3 offset-m5">
-            <div class="g-signin2 button" data-onsuccess="onSignIn"></div>
+        <div class="col offset-s3 offset-m4">
+            <!-- <div class="g-signin2 button" data-onsuccess="onSignIn"></div> -->
+            <button class="btn waves-effect waves-light" (click)="signIn()">Google Sign In
+                <i class="material-icons right">send</i>
+            </button>
         </div>
     </div>
 </div>
