--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -12,9 +12,10 @@ p{
     text-align: center;
 }
 
-.button{
+.btn{
     margin-top: 3em;
     border-radius: 0.5em;
     text-align: center;
     border-radius: 0.5em;
+    background-color: #ff5722;
 }
