services for my expense and groups added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,8 @@
         <app-personal></app-personal> -->
     </div>
 </div>
+
+<app-action-indicator
+  [loading]="actionIndicator.loading"
+  [error]="actionIndicator.error"
+  [show]="actionIndicator.showIndicator" ></app-action-indicator>
