--- a/src/app/groups/group/group.component.html
+++ b/src/app/groups/group/group.component.html
@@ -5,5 +5,6 @@
   <div class="history">
     <app-history [history]="payment_history" ></app-history>
   </div>
-    <app-controls ></app-controls>
+    <app-controls 
+      (onAction)="onGroupExpense($event)" ></app-controls>
 </div>
