--- a/src/app/shared/history/history.component.html
+++ b/src/app/shared/history/history.component.html
@@ -10,6 +10,7 @@
         [description]="transaction.description"
         [isExpense]="!transaction.isPaid"
         [showBtn]="!transaction.isPaid && showSettleBtn"
+        [id]="transaction.id"
       ></app-transaction-card>
     </div>
   </div>
