--- a/src/app/shared/search-users/search-users.component.html
+++ b/src/app/shared/search-users/search-users.component.html
@@ -3,7 +3,7 @@
     type='search' 
     placeholder="search..." 
     [(ngModel)]="search" 
-    (input)="onSearch()" />
+    (change)="onSearch()" />
   <div class="search-users" *ngIf="searchUsers.length"  >
     <div 
       class="search-user" 
