--- a/src/app/username-form/username-form.component.html
+++ b/src/app/username-form/username-form.component.html
@@ -1,13 +1,12 @@
 <div class="row">
-    <form class="col s10 m6 offset-s1 offset-m2 card" [formGroup]="controlsForm">
+    <form class="col s10 m6 offset-s1 offset-m2 card" [formGroup]="controlsForm" (ngSubmit)="onSubmit()">
         <div class="row">
             <div class="input-field col s10 m10 l10 offset-s1 offset-m1 offset-l1">
                 <input placeholder="Enter Username" formControlName="username" type="text" class="validate">
             </div>
             <div class="col offset-s3 offset-m1 offset-l4">
-                <button class="btn waves-effect waves-light" [disabled]="controlsForm.invalid"
-                    (click)="onBtnClick(false)">Submit
-                    <i class="material-icons right">send</i>
+                <button class="btn waves-effect waves-light" [disabled]="controlsForm.invalid" type="submit">Submit
+                    <i class=" material-icons right">send</i>
                 </button>
             </div>
         </div>
