--- a/src/app/groups/group/members/members.component.html
+++ b/src/app/groups/group/members/members.component.html
@@ -7,5 +7,6 @@
   </div>
   <div class="handler" (click)="showMembers = !showMembers" >
     <div>{{ showMembers ? 'hide': 'show' }} members</div>
+    <i class="small material-icons">{{ showMembers ? 'arrow_drop_up' : 'arrow_drop_down' }}</i>
   </div>
 </div>
