--- a/src/app/groups/group/group.component.css
+++ b/src/app/groups/group/group.component.css
@@ -4,6 +4,7 @@
   margin-top: 10px;
   position: relative;
   height: calc(100vh - 95px);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .history {
   height: calc(100vh - 180px);
