--- a/src/app/personal/personal.component.css
+++ b/src/app/personal/personal.component.css
@@ -4,10 +4,10 @@
   margin-top: 10px;
   position: relative;
   height: calc(100vh - 95px);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .history {
   height: calc(100vh - 200px);
-  /* margin-top: 50px; */
   overflow: auto;
 }
 .btn-container {
