--- a/src/app/shared/history/history.component.css
+++ b/src/app/shared/history/history.component.css
@@ -7,3 +7,18 @@
 .rightCard {
   float: right;
 }
+.search-bar {
+  position:sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+}
+input {
+  width: 150px !important;
+  height: 30px !important;
+  background-color: #ffffff !important;
+  border: 1px solid #cccccc !important;
+  border-radius: 5px !important;
+  padding: 0 10px !important;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
+}
