--- a/src/app/shared/modal/modal.component.css
+++ b/src/app/shared/modal/modal.component.css
@@ -8,11 +8,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 .modal {
   background-color: #fff;
-  /* width: 90%;
-  height: 70%; */
   max-width: 700px;
   max-height: 500px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
