--- a/src/app/shared/search-users/search-users.component.css
+++ b/src/app/shared/search-users/search-users.component.css
@@ -35,9 +35,16 @@ input {
   text-overflow: ellipsis;
   padding: 2px 10px;
 } 
-.search-user:hover,
+.user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-user:hover {
+  background-color: #f1f8e9;
+}
 .user:hover {
-  background-color: #cccccc;
+  background-color: #ffebee;
 }
 .users {
   border: 1px solid #cccccc;
@@ -45,4 +52,13 @@ input {
   margin: 5px;
   max-height: 150px;
   overflow: auto;
+}
+
+@media(max-width: 550px) {
+  .container {
+    width: 70vw;
+  }
+  .users {
+    width: 100%;
+  }
 }
