--- a/src/app/shared/transaction-card/transaction-card.component.html
+++ b/src/app/shared/transaction-card/transaction-card.component.html
@@ -4,5 +4,5 @@
     <div class="btn" *ngIf="showBtn" (click)="onSettle()" >settle</div>
   </div>
   <div class="decription">{{ description }}</div>
-  <div class="time">{{ time }}</div>
+  <div class="time">{{ timeStamp }}</div>
 </div>
