--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
 <div class="row">
 
-    <div class="col s12 m4 l3">
+    <div class="col s12 m4 l3" *ngIf="appConfig.user" >
         <app-side-nav></app-side-nav>
     </div>
 
-    <div class="col s12 m8 l9">
+    <div class="col s12" [ngClass]="{m8: appConfig.user, l9: appConfig.user}" >
         <router-outlet></router-outlet>
         <!-- <app-landing></app-landing> -->
         <!-- <app-dashboard></app-dashboard>
