--- a/src/app/shared/history/history.component.html
+++ b/src/app/shared/history/history.component.html
@@ -19,6 +19,7 @@
         [isExpense]="!transaction.isPaid"
         [showBtn]="!transaction.isPaid && showSettleBtn"
         [id]="transaction.id"
+        (settle)="settle.emit()"
       ></app-transaction-card>
     </div>
   </div>
