--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="collection-item" *ngFor="let user of usersOwing;">
                     <div class="row">
-                        <div class="col s6">{{user.username}}</div>
+                        <div class="col s6">{{user.name}}</div>
                         <div class="col s1 offset-s3">{{user.amount}}</div>
                     </div>
                 </li>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="collection-item" *ngFor="let user of usersOwedTo;">
                     <div class="row">
-                        <div class="col s6">{{user.username}}</div>
+                        <div class="col s6">{{user.name}}</div>
                         <div class="col s1 offset-s3">{{user.amount}}</div>
                     </div>
                 </li>
