--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col s6 m3 offset-s3 offset-m4">
                 <div class="card total-expense">
-                    <div class="card-content">
-                        <span class="card-title">Total Expense</span>
+                    <div class="content">
+                        <h5>Total Expense</h5>
                         <p>Amount: {{expenses_total}}</p>
                     </div>
                 </div>
@@ -13,16 +13,16 @@
         <div class="row">
             <div class="col s6 m3">
                 <div class="card owed-to-me">
-                    <div class="card-content">
-                        <span class="card-title">Owed to Me</span>
+                    <div class="content">
+                        <h5>Owed to Me</h5>
                         <p>Amount: {{owed_total}}</p>
                     </div>
                 </div>
             </div>
             <div class="col s6 m3 offset-m5">
                 <div class="card owed-by-me">
-                    <div class="card-content">
-                        <span class="card-title">Owed by Me</span>
+                    <div class="content">
+                        <h5>Owed by Me</h5>
                         <p>Amount: {{owing_total}}</p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 </li>
                 <li class="collection-item" *ngFor="let user of usersOwing;">
                     <div class="row">
-                        <div class="col s6">{{user.username}}</div>
+                        <div class="col s6">{{user.name}}</div>
                         <div class="col s1 offset-s3">{{user.amount}}</div>
                     </div>
                 </li>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="collection-item" *ngFor="let user of usersOwedTo;">
                     <div class="row">
-                        <div class="col s6">{{user.username}}</div>
+                        <div class="col s6">{{user.name}}</div>
                         <div class="col s1 offset-s3">{{user.amount}}</div>
                     </div>
                 </li>
