--- a/src/app/shared/history/history.component.html
+++ b/src/app/shared/history/history.component.html
@@ -2,7 +2,7 @@
   <div class="search-bar" >
     <input 
     type='text'
-    placeholder="searh..."
+    placeholder="search..."
     class="search-input"
     [(ngModel)]="search"
     (input)="onSearch()" />
