--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header
+    [user]="appConfig.user"
+></app-header>
 <div class="row">
 
     <div class="col s12 m4 l3" *ngIf="appConfig.user" >
