--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"><span style="font-weight: 700" >Split</span> pay</a>
+        <a href="#!" class="brand-logo"><span style="font-weight: 700">Split</span> pay</a>
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down header">
             <!-- <li *ngIf="!loggedIn"><a (click)="signIn()"><i class="fa fa-sign-in right"></i>Sign In</a></li> -->
@@ -12,6 +12,6 @@
 
 <ul class="sidenav mobile" id="mobile">
     <!-- <li *ngIf="!loggedIn"><a (click)="signIn()"><i class="fa fa-sign-in right"></i>Sign In</a></li> -->
-    <li *ngIf="loggedIn"><i class="material-icons right">account_circle</i>{{username}}</li>
+    <li *ngIf="loggedIn"><a><i class="material-icons right">account_circle</i>{{username}}</a></li>
     <li *ngIf="loggedIn"><a (click)="signOut()"><i class="fa fa-sign-out right"></i>Logout</a></li>
 </ul>
