--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -11,11 +11,16 @@ p{
     font-weight: 600;
     text-align: center;
 }
-
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .btn{
     margin-top: 3em;
     border-radius: 0.5em;
     text-align: center;
     border-radius: 0.5em;
     background-color: #ff5722;
+    margin: auto;
 }
